name:                piebot
version:             0.1.0.0
synopsis:            A Twitter bot very enthusiastic about pie
description:         Loves to talk about pie
homepage:            bitemyapp.com
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2014, Chris Allen
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable piebot
  main-is:             Main.hs
  build-depends:       base            >=4.7    && <4.8,
                       twitter-conduit >=0.1.0  && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
