name:                piebot
version:             0.1.0.0
synopsis:            A Twitter bot very enthusiastic about pie
description:         Loves to talk about pie
homepage:            bitemyapp.com
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
copyright:           2014, Chris Allen
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable piebot
  main-is:             Main.hs
  build-depends:       base               >=4.6    && <4.8,
                       twitter-conduit    >=0.1.0  && <0.2,
                       twitter-types-lens >=0.6    && <0.7,
                       http-conduit       >=2.1    && <2.2,
                       authenticate-oauth >=1.5    && <1.6,
                       text               >=0.11.3 && <1.3,
                       conduit            >=1.2    && <1.3,
                       bytestring         >=0.10   && <0.10.5,
                       transformers       >=0.4    && <0.5,
                       lens               >=4.5    && <4.7,
                       monad-control      >=0.3    && <0.4,
                       resourcet          >=1.1    && <1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
